[gd_scene load_steps=18 format=3 uid="uid://bnl88g5s58mxp"]

[ext_resource type="Texture2D" uid="uid://h8wgg35nu2fr" path="res://art/Sprout Lands - UI Pack/Sprite sheets/Sprite sheet for Basic Pack.png" id="1_dta1h"]
[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_lt7kk"]
[ext_resource type="FontFile" uid="uid://7lseluimqeje" path="res://data/new_font_file.tres" id="3_0dtj0"]
[ext_resource type="Texture2D" uid="uid://bxhk31nhkdid1" path="res://data/small_house.tres" id="3_78lpv"]
[ext_resource type="Texture2D" uid="uid://dgjubisoxcgn0" path="res://art/Sprout Lands - UI Pack/Sprite sheets/UI Big Play Button.png" id="4_xanbn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b08bt"]
atlas = ExtResource("1_dta1h")
region = Rect2(56, 104, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_rcb8l"]
font = ExtResource("3_0dtj0")
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3vje5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7j8r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0phc3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ijaw1"]
atlas = ExtResource("1_dta1h")
region = Rect2(256, 176, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q1u0"]
atlas = ExtResource("4_xanbn")
region = Rect2(0, 0, 96, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_do5m1"]
texture = SubResource("AtlasTexture_2q1u0")

[sub_resource type="AtlasTexture" id="AtlasTexture_cbygr"]
atlas = ExtResource("4_xanbn")
region = Rect2(96, 0, 96, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j55bc"]
texture = SubResource("AtlasTexture_cbygr")

[sub_resource type="AtlasTexture" id="AtlasTexture_3kbli"]
atlas = ExtResource("4_xanbn")
region = Rect2(0, 0, 96, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3q2pm"]
texture = SubResource("AtlasTexture_3kbli")

[node name="inventory_slot" type="NinePatchRect"]
custom_minimum_size = Vector2(64, 64)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lt7kk")

[node name="border" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_b08bt")

[node name="itemicon" type="TextureRect" parent="border"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_78lpv")

[node name="ItemQuantity" type="Label" parent="border"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.125
anchor_right = 0.125
anchor_bottom = 0.125
offset_right = 7.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 24
text = "1"
label_settings = SubResource("LabelSettings_rcb8l")

[node name="itemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.198
anchor_right = 0.861
anchor_bottom = 0.864
offset_left = -0.384018
offset_top = -0.304016
offset_right = 0.12793
offset_bottom = 0.127991
theme_override_styles/hover = SubResource("StyleBoxEmpty_3vje5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_d7j8r")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0phc3")

[node name="UsagePanel" type="NinePatchRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.028
anchor_top = -1.025
anchor_right = 2.028
anchor_bottom = -0.025
offset_left = -0.256001
offset_top = 0.200073
offset_right = -0.256104
offset_bottom = 0.200001
texture = SubResource("AtlasTexture_ijaw1")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="SelectButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.125
anchor_right = 0.937
anchor_bottom = 0.625
offset_left = 0.0639997
offset_right = 0.0639954
theme_override_fonts/font = ExtResource("3_0dtj0")
theme_override_styles/hover = SubResource("StyleBoxTexture_do5m1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j55bc")
theme_override_styles/normal = SubResource("StyleBoxTexture_3q2pm")
text = "Drop"

[node name="BuildingType" type="Label" parent="UsagePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.625
anchor_right = 0.937
anchor_bottom = 0.75
offset_left = 0.0639997
offset_right = 0.0639954
theme_override_fonts/font = ExtResource("3_0dtj0")
theme_override_font_sizes/font_size = 8
text = "type"
horizontal_alignment = 1

[connection signal="pressed" from="itemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/SelectButton" to="." method="_on_select_button_pressed"]
